前端完成国际化库开发，待将页面进行国际化

--- a/src/main/resources/valid_en_US.properties
+++ b/src/main/resources/valid_en_US.properties
@@ -18,7 +18,7 @@ valid.Building.number.Pattern=The length of the building number is 1-4, composed
 valid.Building.name.NotNull=The building name cannot be null
 valid.Building.BuildingType.NotNull=Building type cannot be null
 
-# domain.Building
+# domain.Room
 #valid.Room.number.Range=The range of room number is 101-999
 valid.Room.building.NotNull=The building to which the classroom belongs cannot be empty
 
