--- a/src/main/resources/valid_zh_CN.properties
+++ b/src/main/resources/valid_zh_CN.properties
@@ -18,7 +18,7 @@ valid.Building.number.Pattern=\u697C\u53F7\u957F\u5EA6\u57281-4\uFF0C\u7531\u657
 valid.Building.name.NotNull=\u697C\u540D\u4E0D\u80FD\u4E3A\u7A7A
 valid.Building.BuildingType.NotNull=\u697C\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
 
-# domain.Building
+# domain.Room
 #valid.Room.number.Range=\u6559\u5BA4\u53F7\u4E3A\u4E09\u4F4D\u6570101-999
 valid.Room.building.NotNull=\u6559\u5BA4\u6240\u5C5E\u697C\u5B87\u4E0D\u80FD\u4E3A\u7A7A
 
