进一步完成国际化和参数校验

--- a/src/main/resources/i18n/db_en_US.properties
+++ b/src/main/resources/i18n/db_en_US.properties
@@ -9,3 +9,6 @@ db.insertRoom.failure=insert room failure
 
 db.insertYear.success=insert year success
 db.insertYear.failure=insert year failure
+
+db.updateRoom.success=Successfully updated classroom information
+db.updateRoom.failure=Failed to update classroom information
