--- a/src/main/resources/i18n/valid_en_US.properties
+++ b/src/main/resources/i18n/valid_en_US.properties
@@ -20,7 +20,12 @@ valid.Building.BuildingType.NotNull=Building type cannot be null
 
 # domain.Room
 #valid.Room.number.Range=The range of room number is 101-999
+valid.Room.id.NotNull=Classroom ID cannot be empty
+valid.Room.number.NotNull=Classroom number cannot be empty
 valid.Room.building.NotNull=The building to which the classroom belongs cannot be empty
+valid.Room.capacity.NotNull=Capacity cannot be empty
+valid.Room.capacity.Range=Capacity >0
+valid.Room.roomType.NotNull=Classroom type cannot be empty
 
 # domain.Year
 valid.Year.year.NotNull=Year cannot be empty
@@ -40,3 +45,8 @@ valid.CourseInfo.length.NotNull=The length cannot be empty
 valid.CourseInfo.length.Range=The length section is 1-11
 valid.CourseInfo.address.NotNull=Classroom ID cannot be empty
 #valid.CourseInfo.address.Range=The range of room number is 101-999
+
+# domain.Elective
+valid.Elective.id.NotNull=Elective ID cannot be empty
+valid.Elective.score.NotNull=The score cannot be empty
+valid.Elective.score.Range=The score is between 0-100
