--- a/src/main/resources/i18n/valid_zh_CN.properties
+++ b/src/main/resources/i18n/valid_zh_CN.properties
@@ -20,7 +20,12 @@ valid.Building.BuildingType.NotNull=\u697C\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
 
 # domain.Room
 #valid.Room.number.Range=\u6559\u5BA4\u53F7\u4E3A\u4E09\u4F4D\u6570101-999
+valid.Room.id.NotNull=\u6559\u5BA4ID\u4E0D\u80FD\u4E3A\u7A7A
+valid.Room.number.NotNull=\u6559\u5BA4\u53F7\u4E0D\u80FD\u4E3A\u7A7A
 valid.Room.building.NotNull=\u6559\u5BA4\u6240\u5C5E\u697C\u5B87\u4E0D\u80FD\u4E3A\u7A7A
+valid.Room.capacity.NotNull=\u5BB9\u7EB3\u4EBA\u6570\u4E0D\u80FD\u4E3A\u7A7A
+valid.Room.capacity.Range=\u5BB9\u7EB3\u4EBA\u6570>0
+valid.Room.roomType.NotNull=\u6559\u5BA4\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
 
 # domain.Year
 valid.Year.year.NotNull=\u5E74\u4EFD\u4E0D\u80FD\u4E3A\u7A7A
@@ -40,3 +45,8 @@ valid.CourseInfo.length.NotNull=\u6301\u7EED\u8282\u4E0D\u80FD\u4E3A\u7A7A
 valid.CourseInfo.length.Range=\u6301\u7EED\u8282\u53D6\u503C\u57281-4
 valid.CourseInfo.address.NotNull=\u4E0A\u8BFE\u6559\u5BA4ID\u4E0D\u80FD\u4E3A\u7A7A
 #valid.CourseInfo.address.Range=\u6559\u5BA4\u53F7\u4E3A\u4E09\u4F4D\u6570101-999
+
+# domain.Elective
+valid.Elective.id.NotNull=\u9009\u8BFEID\u4E0D\u80FD\u4E3A\u7A7A
+valid.Elective.score.NotNull=\u5206\u6570\u4E0D\u80FD\u4E3A\u7A7A
+valid.Elective.score.Range=\u5206\u6570\u53D6\u503C\u57280-100
