学生选课，退课功能实现 使用aspect对控制器方法同一增加 判断BindingResult是否有不合法（请求参数是否有不合法），如果有不合法，抛出异常，但此功能还未应用到业务控制器方法，仅搭建完整

--- a/src/main/resources/i18n/db_en_US.properties
+++ b/src/main/resources/i18n/db_en_US.properties
@@ -12,3 +12,18 @@ db.insertYear.failure=insert year failure
 
 db.updateRoom.success=Successfully updated classroom information
 db.updateRoom.failure=Failed to update classroom information
+
+db.deleteBuilding.success=Building successfully deleted
+db.deleteBuilding.failure=Failed to delete building
+
+db.deleteRoom.success=Successfully deleted the classroom
+db.deleteRoom.failure=Failed to delete classroom
+
+db.deleteYear.success=Year deleted successfully
+db.deleteYear.failure=Failed to delete year
+
+db.insertElective.success=Insert elective succeeded
+db.insertElective.failure=Insert elective failed
+
+db.deleteElective.success=Delete elective succeeded
+db.deleteElective.failure=Delete elective failed
