--- a/src/main/resources/i18n/db_zh_CN.properties
+++ b/src/main/resources/i18n/db_zh_CN.properties
@@ -21,3 +21,9 @@ db.deleteRoom.failure=\u5220\u9664\u6559\u5BA4\u5931\u8D25
 
 db.deleteYear.success=\u5220\u9664\u5E74\u4EFD\u6210\u529F
 db.deleteYear.failure=\u5220\u9664\u5E74\u4EFD\u5931\u8D25
+
+db.insertElective.success=\u63D2\u5165\u9009\u8BFE\u6210\u529F
+db.insertElective.failure=\u63D2\u5165\u9009\u8BFE\u5931\u8D25
+
+db.deleteElective.success=\u5220\u9664\u9009\u8BFE\u6210\u529F
+db.deleteElective.failure=\u5220\u9664\u9009\u8BFE\u5931\u8D25
