--- a/src/main/resources/i18n/valid_en_US.properties
+++ b/src/main/resources/i18n/valid_en_US.properties
@@ -1,6 +1,14 @@
-valid.User.password.NotEmpty=password cannot be null
+# domain\u5B57\u6BB5\u6821\u9A8C
+#   valid.{ClassName}.{ParamName}.{ValidName}
+#   valid.User.password.NotEmpty
+# Controller\u5B57\u6BB5\u6821\u9A8C
+#   valid.{ControllerName}.{MethodName}.{ParamName}.{ValidName}
+#   valid.InsertController.insertElective.courseIds.NotNull
 
 # domain.User
+valid.User.password.NotEmpty=password cannot be null
+
+# domain.Course
 valid.Course.name.NotEmpty=course name cannot be null
 valid.Course.credit.NotNull=course credit cannot be null
 valid.Course.credit.Range=The credit range is between 1-4
@@ -50,3 +58,6 @@ valid.CourseInfo.address.NotNull=Classroom ID cannot be empty
 valid.Elective.id.NotNull=Elective ID cannot be empty
 valid.Elective.score.NotNull=The score cannot be empty
 valid.Elective.score.Range=The score is between 0-100
+
+# domain.vo.InsertElectiveVO
+valid.InsertElectiveVO.courseIds.NotNull=Course ID list cannot be empty
