--- a/src/main/resources/i18n/valid_zh_CN.properties
+++ b/src/main/resources/i18n/valid_zh_CN.properties
@@ -1,6 +1,14 @@
-valid.User.password.NotEmpty=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+# domain\u5B57\u6BB5\u6821\u9A8C
+#   valid.{ClassName}.{ParamName}.{ValidName}
+#   valid.User.password.NotEmpty
+# Controller\u5B57\u6BB5\u6821\u9A8C
+#   valid.{ControllerName}.{MethodName}.{ParamName}.{ValidName}
+#   valid.InsertController.insertElective.courseIds.NotNull
 
 # domain.User
+valid.User.password.NotEmpty=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+
+# domain.Course
 valid.Course.name.NotEmpty=\u8BFE\u7A0B\u540D\u4E0D\u80FD\u4E3A\u7A7A
 valid.Course.credit.NotNull=\u5B66\u5206\u4E0D\u80FD\u4E3A\u7A7A
 valid.Course.credit.Range=\u5B66\u5206\u53D6\u503C\u57281-4
@@ -50,3 +58,6 @@ valid.CourseInfo.address.NotNull=\u4E0A\u8BFE\u6559\u5BA4ID\u4E0D\u80FD\u4E3A\u7
 valid.Elective.id.NotNull=\u9009\u8BFEID\u4E0D\u80FD\u4E3A\u7A7A
 valid.Elective.score.NotNull=\u5206\u6570\u4E0D\u80FD\u4E3A\u7A7A
 valid.Elective.score.Range=\u5206\u6570\u53D6\u503C\u57280-100
+
+# domain.vo.InsertElectiveVO
+valid.InsertElectiveVO.courseIds.NotNull=\u8BFE\u7A0BID\u5217\u8868\u4E0D\u80FD\u4E3A\u7A7A
