优化更新密码

--- a/src/main/resources/i18n/db_en_US.properties
+++ b/src/main/resources/i18n/db_en_US.properties
@@ -27,3 +27,6 @@ db.insertElective.failure=Insert elective failed
 
 db.deleteElective.success=Delete elective succeeded
 db.deleteElective.failure=Delete elective failed
+
+db.updatePassword.success=Update password success
+db.updatePassword.failure=Update password failure
