--- a/src/main/resources/i18n/db_zh_CN.properties
+++ b/src/main/resources/i18n/db_zh_CN.properties
@@ -27,3 +27,6 @@ db.insertElective.failure=\u63D2\u5165\u9009\u8BFE\u5931\u8D25
 
 db.deleteElective.success=\u5220\u9664\u9009\u8BFE\u6210\u529F
 db.deleteElective.failure=\u5220\u9664\u9009\u8BFE\u5931\u8D25
+
+db.updatePassword.success=\u66F4\u6539\u5BC6\u7801\u6210\u529F
+db.updatePassword.failure=\u66F4\u6539\u5BC6\u7801\u5931\u8D25
