优化与修改

--- a/src/main/resources/i18n/db_zh_CN.properties
+++ b/src/main/resources/i18n/db_zh_CN.properties
@@ -30,3 +30,12 @@ db.deleteElective.failure=\u5220\u9664\u9009\u8BFE\u5931\u8D25
 
 db.updatePassword.success=\u66F4\u6539\u5BC6\u7801\u6210\u529F
 db.updatePassword.failure=\u66F4\u6539\u5BC6\u7801\u5931\u8D25
+
+db.updateStudentScore.success=\u4FEE\u6539\u5B66\u751F\u6210\u7EE9\u6210\u529F
+db.updateStudentScore.failure=\u4FEE\u6539\u5B66\u751F\u6210\u7EE9\u5931\u8D25
+
+db.updateYear.success=\u4FEE\u6539\u5E74\u4EFD\u6210\u529F
+db.updateYear.failure=\u4FEE\u6539\u5E74\u4EFD\u5931\u8D25
+
+db.updateBuilding.success=\u66F4\u65B0\u697C\u5B87\u4FE1\u606F\u6210\u529F
+db.updateBuilding.failure=\u66F4\u65B0\u697C\u5B87\u4FE1\u606F\u5931\u8D25
