优化与修改

--- a/src/main/resources/i18n/db_en_US.properties
+++ b/src/main/resources/i18n/db_en_US.properties
@@ -28,5 +28,14 @@ db.insertElective.failure=Insert elective failed
 db.deleteElective.success=Delete elective succeeded
 db.deleteElective.failure=Delete elective failed
 
-db.updatePassword.success=Update password success
-db.updatePassword.failure=Update password failure
+db.updatePasswordVO.success=Update password success
+db.updatePasswordVO.failure=Update password failure
+
+db.updateStudentScore.success=Update student info success
+db.updateStudentScore.failure=Update student info failure
+
+db.updateYear.success=Update year success
+db.updateYear.failure=Update year failure
+
+db.updateBuilding.success=Update Building info success
+db.updateBuilding.failure=Update Building info failure
