--- a/src/main/resources/i18n/db_zh_CN.properties
+++ b/src/main/resources/i18n/db_zh_CN.properties
@@ -28,8 +28,8 @@ db.insertElective.failure=\u63D2\u5165\u9009\u8BFE\u5931\u8D25
 db.deleteElective.success=\u5220\u9664\u9009\u8BFE\u6210\u529F
 db.deleteElective.failure=\u5220\u9664\u9009\u8BFE\u5931\u8D25
 
-db.updatePassword.success=\u66F4\u6539\u5BC6\u7801\u6210\u529F
-db.updatePassword.failure=\u66F4\u6539\u5BC6\u7801\u5931\u8D25
+db.updatePasswordVO.success=\u66F4\u6539\u5BC6\u7801\u6210\u529F
+db.updatePasswordVO.failure=\u66F4\u6539\u5BC6\u7801\u5931\u8D25
 
 db.updateStudentScore.success=\u4FEE\u6539\u5B66\u751F\u6210\u7EE9\u6210\u529F
 db.updateStudentScore.failure=\u4FEE\u6539\u5B66\u751F\u6210\u7EE9\u5931\u8D25
