--- a/src/main/resources/i18n/response_en_US.properties
+++ b/src/main/resources/i18n/response_en_US.properties
@@ -3,5 +3,9 @@
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).success
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).failure
 response.setLocale.NotEmpty=locale cannot be empty
-response.setLocale.success=locale changed successfully
-response.setLocale.failure=Failed to change locale
+response.setLocale.success=changed locale success
+response.setLocale.failure=change locale failure
+
+response.login.success=Login success
+response.login.failure=Login failure, the username or password is incorrect
+
