--- a/src/main/resources/i18n/valid_en_US.properties
+++ b/src/main/resources/i18n/valid_en_US.properties
@@ -61,3 +61,8 @@ valid.Elective.score.Range=The score is between 0-100
 
 # domain.vo.InsertElectiveVO
 valid.InsertElectiveVO.courseIds.NotNull=Course ID list cannot be empty
+
+# domain.orm.User
+valid.User.id.NotNull=User id can not be empty
+valid.User.password.NotNull=Password can not be empty
+valid.User.permissionType.NotNull=User permission type can not be empty
