--- a/src/main/resources/i18n/response_zh_CN.properties
+++ b/src/main/resources/i18n/response_zh_CN.properties
@@ -5,3 +5,6 @@
 response.setLocale.NotEmpty=\u8BED\u8A00\u4E0D\u80FD\u4E3A\u7A7A
 response.setLocale.success=\u66F4\u6539\u8BED\u8A00\u6210\u529F
 response.setLocale.failure=\u66F4\u6539\u8BED\u8A00\u5931\u8D25
+
+response.login.success=\u767B\u9646\u6210\u529F
+response.login.failure=\u767B\u9646\u5931\u8D25\uFF0C\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF
