--- a/src/main/resources/i18n/valid_zh_CN.properties
+++ b/src/main/resources/i18n/valid_zh_CN.properties
@@ -61,3 +61,8 @@ valid.Elective.score.Range=\u5206\u6570\u53D6\u503C\u57280-100
 
 # domain.vo.InsertElectiveVO
 valid.InsertElectiveVO.courseIds.NotNull=\u8BFE\u7A0BID\u5217\u8868\u4E0D\u80FD\u4E3A\u7A7A
+
+# domain.orm.User
+valid.User.id.NotNull=ID\u4E0D\u80FD\u4E3A\u7A7A
+valid.User.password.NotNull=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+valid.User.permissionType.NotNull=\u7528\u6237\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
