防止登陆页面快速点击提交发送多个ajax

--- a/src/main/resources/i18n/response_zh_CN.properties
+++ b/src/main/resources/i18n/response_zh_CN.properties
@@ -2,9 +2,13 @@
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).\u6821\u9A8C\u7C7B\u578B
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).success
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).failure
+# key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).\u8FC7\u6EE4\u5668\u3001\u62E6\u622A\u5668(\u540D).*
+
 response.setLocale.NotEmpty=\u8BED\u8A00\u4E0D\u80FD\u4E3A\u7A7A
 response.setLocale.success=\u66F4\u6539\u8BED\u8A00\u6210\u529F
 response.setLocale.failure=\u66F4\u6539\u8BED\u8A00\u5931\u8D25
 
 response.login.success=\u767B\u9646\u6210\u529F
 response.login.failure=\u767B\u9646\u5931\u8D25\uFF0C\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF
+
+response.login.LoginInterceptor=\u672A\u767B\u5F55
