--- a/src/main/resources/i18n/response_en_US.properties
+++ b/src/main/resources/i18n/response_en_US.properties
@@ -2,6 +2,8 @@
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).\u6821\u9A8C\u7C7B\u578B
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).success
 # key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).failure
+# key\u4E3A\u8BF7\u6C42 response.\u529F\u80FD(URL).\u8FC7\u6EE4\u5668\u3001\u62E6\u622A\u5668(\u540D).*
+
 response.setLocale.NotEmpty=locale cannot be empty
 response.setLocale.success=changed locale success
 response.setLocale.failure=change locale failure
@@ -9,3 +11,4 @@ response.setLocale.failure=change locale failure
 response.login.success=Login success
 response.login.failure=Login failure, the username or password is incorrect
 
+response.login.LoginInterceptor=Not login
