添加教学评价功能 添加教学评价数据库表

--- a/src/main/resources/i18n/db_zh_CN.properties
+++ b/src/main/resources/i18n/db_zh_CN.properties
@@ -39,3 +39,6 @@ db.updateYear.failure=\u4FEE\u6539\u5E74\u4EFD\u5931\u8D25
 
 db.updateBuilding.success=\u66F4\u65B0\u697C\u5B87\u4FE1\u606F\u6210\u529F
 db.updateBuilding.failure=\u66F4\u65B0\u697C\u5B87\u4FE1\u606F\u5931\u8D25
+
+db.insertTeachEvaluate.success=\u63D2\u5165\u6559\u5B66\u8BC4\u4EF7\u6210\u529F
+db.insertTeachEvaluate.failure=\u63D2\u5165\u6559\u5B66\u8BC4\u4EF7\u5931\u8D25
