--- a/src/main/resources/i18n/db_en_US.properties
+++ b/src/main/resources/i18n/db_en_US.properties
@@ -39,3 +39,6 @@ db.updateYear.failure=Update year failure
 
 db.updateBuilding.success=Update Building info success
 db.updateBuilding.failure=Update Building info failure
+
+db.insertTeachEvaluate.success=Insert teach evaluate success
+db.insertTeachEvaluate.failure=Insert teach evaluate failure
