--- a/src/main/resources/i18n/db_en_US.properties
+++ b/src/main/resources/i18n/db_en_US.properties
@@ -42,3 +42,12 @@ db.updateBuilding.failure=Update Building info failure
 
 db.insertTeachEvaluate.success=Insert teach evaluate success
 db.insertTeachEvaluate.failure=Insert teach evaluate failure
+
+db.deleteSystemKeyValue.success=Delete System-key-value success
+db.deleteSystemKeyValue.failure=Delete System-key-value failure
+
+db.insertSystemKeyValue.success=Insert System-key-value success
+db.insertSystemKeyValue.failure=Insert System-key-value failure
+
+db.updateSystemKeyValue.success=Update System-key-value success
+db.updateSystemKeyValue.failure=Update System-key-value failure
