--- a/src/main/resources/i18n/db_zh_CN.properties
+++ b/src/main/resources/i18n/db_zh_CN.properties
@@ -42,3 +42,12 @@ db.updateBuilding.failure=\u66F4\u65B0\u697C\u5B87\u4FE1\u606F\u5931\u8D25
 
 db.insertTeachEvaluate.success=\u63D2\u5165\u6559\u5B66\u8BC4\u4EF7\u6210\u529F
 db.insertTeachEvaluate.failure=\u63D2\u5165\u6559\u5B66\u8BC4\u4EF7\u5931\u8D25
+
+db.deleteSystemKeyValue.success=\u5220\u9664\u7CFB\u7EDF\u952E\u503C\u5BF9\u6210\u529F
+db.deleteSystemKeyValue.failure=\u5220\u9664\u7CFB\u7EDF\u952E\u503C\u5BF9\u5931\u8D25
+
+db.insertSystemKeyValue.success=\u63D2\u5165\u7CFB\u7EDF\u952E\u503C\u5BF9\u6210\u529F
+db.insertSystemKeyValue.failure=\u63D2\u5165\u7CFB\u7EDF\u952E\u503C\u5BF9\u5931\u8D25
+
+db.updateSystemKeyValue.success=\u66F4\u65B0\u7CFB\u7EDF\u952E\u503C\u5BF9\u6210\u529F
+db.updateSystemKeyValue.failure=\u66F4\u65B0\u7CFB\u7EDF\u952E\u503C\u5BF9\u5931\u8D25
