--- a/src/main/resources/i18n/valid_en_US.properties
+++ b/src/main/resources/i18n/valid_en_US.properties
@@ -66,3 +66,9 @@ valid.InsertElectiveVO.courseIds.NotNull=Course ID list cannot be empty
 valid.User.id.NotNull=User id can not be empty
 valid.User.password.NotNull=Password can not be empty
 valid.User.permissionType.NotNull=User permission type can not be empty
+
+# domain.orm.SystemKeyValue
+valid.SystemKeyValue.key.NotBlank=Key can not be empty
+valid.SystemKeyValue.value.NotBlank=Value can not be empty
+valid.SystemKeyValue.newKey.NotBlank=newKey can not be empty
+valid.SystemKeyValue.newValue.NotBlank=newValue can not be empty
