--- a/src/main/resources/i18n/valid_zh_CN.properties
+++ b/src/main/resources/i18n/valid_zh_CN.properties
@@ -66,3 +66,9 @@ valid.InsertElectiveVO.courseIds.NotNull=\u8BFE\u7A0BID\u5217\u8868\u4E0D\u80FD\
 valid.User.id.NotNull=ID\u4E0D\u80FD\u4E3A\u7A7A
 valid.User.password.NotNull=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
 valid.User.permissionType.NotNull=\u7528\u6237\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+
+# domain.orm.SystemKeyValue
+valid.SystemKeyValue.key.NotBlank=\u952E\u4E0D\u80FD\u4E3A\u7A7A
+valid.SystemKeyValue.value.NotBlank=\u503C\u4E0D\u80FD\u4E3A\u7A7A
+valid.SystemKeyValue.newKey.NotBlank=\u65B0\u952E\u4E0D\u80FD\u4E3A\u7A7A
+valid.SystemKeyValue.newValue.NotBlank=\u65B0\u503C\u4E0D\u80FD\u4E3A\u7A7A
